# Decentralized-Scholarship-Distribution-System

./: .env.example  .gitignore  README.md
backend/: Dockerfile  app.py  config.py  requirements.txt
backend/models/: __init__.py
backend/routes/: admin.py  auth.py  student.py
backend/services/: auth.py  firebase_service.py  stellar_service.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: layout.js  layout.jsx  page.js  page.jsx
frontend/src/app/admin/: layout.js  page.js
frontend/src/app/admin/applications/: page.js
frontend/src/app/admin/applications/[id]/: page.js
frontend/src/app/admin/settings/: page.js
frontend/src/app/admin/statistics/: page.js
frontend/src/app/login/: page.jsx
frontend/src/app/register/: page.jsx
frontend/src/app/rough/: page.jsx
frontend/src/app/student/: layout.js  page.js
frontend/src/app/student/applications/: page.js
frontend/src/app/student/profile/: page.js
frontend/src/app/student/wallet/: page.js
frontend/src/components/: BackendStatus.jsx  DevelopmentBanner.jsx  Footer.jsx  Header.jsx  Hero.jsx  HowItWorks.jsx  LoginPage.jsx  Navbar.jsx  NewApplicationForm.jsx  TechnologyShowcase.jsx
frontend/src/components/ui/: alert.jsx  badge.jsx  button.jsx  card.jsx  dialog.jsx  input.jsx  textarea.jsx
frontend/src/hooks/: useAuth.js  useWallet.js
frontend/src/lib/: api.js  config.js  firebase.js  wallet.js
smart-contracts/: Cargo.toml  README.md
smart-contracts/contracts/scholarship/: Cargo.toml  Makefile
smart-contracts/contracts/scholarship/src/: lib.rs  test.rs
(+1 files in other folders)
