[workspace]
resolver = "2"

members = [
    "contracts/scholarship",
]

[workspace.dependencies]
soroban-sdk = "21.0.0"

# Profile optimized for Stellar smart contracts
[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true